
- Fix pressure drop by zone computation (gravity term twice multiplied by
  density at outlet boundary).

- Lagrangian module: fix particle flow rate per class reporting in listing file
  (GitHub issue #4).

- GUI: fix failure to cleanly stop running computations on some
  systems (Mantis issue #242).

- Fix crash in restart using coupled RSM model from non-RSM computation
  (issue #252).

Release 5.1.4 (March 30 2018)
=============================

Bug fixes
---------

- Fix for importing some EnSight geometries (meshes) in preprocessor.

- Fix crash using Intel 2018 compilers.

- Fix some memory leaks using Catalyst output.

- Fix parallel interlock in some cases where using the 1D thermal wall model.

- GUI: delete scalar profile and time average when deleting the scalar itself.

- Fix issue #251 (crash for periodicity in parallel in some cases).

- GUI: fix crash when selecting gradient reconstruction mode.

Changes
-------

- Add Support for reading CGNS files with NFACE_n elements.

Release 5.1.3 (Jan 31 2018)
===========================

Bug fixes
---------

- Fix monitoring in GUI: always set monitoring status to on for all variables
  by default (even if no probes defined yet).

- Fix crash in scalar gradient reconstruction with body forces for sequential
  runs (due to incomplete fix in 5.1.2).

- Fix issue #247: crash when running turbomachinery with LES and SIMPLEC
  (non-validated/recommended).

- Fix obsolete URL for HDF5 download in automatic installer.

Changes
-------

- Allow stopping at a given wall-clock time using the control_file.

Release 5.1.2 (Jan 29 2018)
===========================

Bug fixes
---------

- Fix missing ghost cell exchange for some scalar gradient reconstructions
  using body forces (iphydr = 1).

- Add --enable-dlopen-rtld-global configure option to fix initialization issues
  of Catalyst or PNG histogram writers as plugin on some systems.

- Fix deadlock in interior faces renumbering with halo_adjacent_faces_last.
